--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "degen": "^0.0.86",
     "next": "12.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "eslint": "8.19.0",
