--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.61",
+    "@mui/material": "^5.9.0",
+    "@typeform/embed-react": "^1.17.0",
     "degen": "^0.0.86",
+    "mixpanel-browser": "^2.45.0",
     "next": "12.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
